--- a/Miniswipper/Index.html
+++ b/Miniswipper/Index.html
@@ -14,6 +14,7 @@
         </div>
 <table id="GameBoard">
 </table>
+        salam
 <div id="myModal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
@@ -24,7 +25,7 @@
         </div>
         <div class="modal-footer">
 
-    
+
   <input type="range" min="1" max="300" value="150" class="slider" id="myRange">
   <p>Value: <span id="demo"></span></p>
             <button type="button" class="btn btn-default" id="btnEnter">Enter</button>
