--- a/Miniswipper/Index.html
+++ b/Miniswipper/Index.html
@@ -30,9 +30,8 @@
             <button type="button" class="btn btn-default" id="btnEnter">Enter</button>
         </div>
     </div>
-fg
 </div>
-
+srrgfgdg
 <script src="script.js"></script>
 </body>
 </html>
