add replay button when boom!

--- a/Miniswipper/Index.html
+++ b/Miniswipper/Index.html
@@ -9,11 +9,19 @@
     <meta charset="UTF-8">
 </head>
 <body oncontextmenu="return false;">
+
+
+  <!-- Modal -->
+
+
+
 <div id="Panle">
     <div id="disbomb"></div>
 </div>
-<table id="GameBoard">
+<table  id="GameBoard">
 </table>
+
+
 <div id="myModal" class="modal">
     <div class="modal-content">
         <div class="modal-header">
@@ -31,7 +39,23 @@
         </div>
     </div>
 </div>
-srrgfgdg
+
+<div id="modalreplay" class="modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>Replay </h2>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" onclick="Replay()"><span class="glyphicon glyphicon-repeat"></span></button>
+
+        </div>
+    </div>
+</div>
+
+
 <script src="script.js"></script>
 </body>
 </html>
