--- a/Miniswipper/Index.html
+++ b/Miniswipper/Index.html
@@ -49,7 +49,7 @@
         <div class="modal-body">
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" onclick="Replay()"><span class="glyphicon glyphicon-repeat"></span></button>
+            <button id="btn-replay" class="btn btn-primary" onclick="Replay()"><span class="glyphicon glyphicon-repeat"></span></button>
 
         </div>
     </div>
